crates/viewer/dl_time_panel/tests/snapshots/various_filters-ath,left.snap
---
source: crates/viewer/dl_time_panel/tests/time_panel_filter_tests.rs
expression: streams_tree_data
---
children:
  - entity_path: []
    label: /
    highlight_sections: []
    default_open: true
    children:
      - entity_path:
          - path
        label: path/
        highlight_sections:
          - start: 1
            end: 4
        default_open: true
        children:
          - entity_path:
              - path
              - to
            label: to/
            highlight_sections: []
            default_open: true
            children:
              - entity_path:
                  - path
                  - to
                  - left
                label: left
                highlight_sections:
                  - start: 0
                    end: 4
                default_open: false
                children: []
